--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     <div id="app"></div>
 
     <div id="popup">
-        <div id="popup-content"></div>
+        <div id="popup-field">
+            <div id="popup-content">
+            </div>
+            <button id="popup-button"></button>
+        </div>
     </div>
 
     <script src="js/main.js"></script>
